--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}patterns/index.html">패턴</a></div>
     <ul>
-      <li><a href="{{site.url}}patterns/new-4-0.html">New in Android 4.0</a></li>
+      <li><a href="{{site.url}}patterns/new-4-0.html">안드로이드 4.0의 새로운 점</a></li>
       <li><a href="{{site.url}}patterns/gestures.html">Gestures</a></li>
       <li><a href="{{site.url}}patterns/app-structure.html">App Structure</a></li>
       <li><a href="{{site.url}}patterns/navigation.html">Navigation</a></li>
@@ -63,7 +63,7 @@
       <li><a href="{{site.url}}patterns/swipe-views.html">Swipe Views</a></li>
       <li><a href="{{site.url}}patterns/selection.html">Selection</a></li>
       <li><a href="{{site.url}}patterns/notifications.html">Notifications</a></li>
-      <li><a href="{{site.url}}patterns/compatibility.html">Compatibility</a></li>
+      <li><a href="{{site.url}}patterns/compatibility.html">호환성</a></li>
       <li><a href="{{site.url}}patterns/pure-android.html">Pure Android</a></li>
     </ul>
   </li>
