패턴 항목 한글로 바꿈

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,16 +55,16 @@
     <div class="nav-section-header"><a href="{{site.url}}patterns/index.html">패턴</a></div>
     <ul>
       <li><a href="{{site.url}}patterns/new-4-0.html">안드로이드 4.0의 새로운 점</a></li>
-      <li><a href="{{site.url}}patterns/gestures.html">Gestures</a></li>
-      <li><a href="{{site.url}}patterns/app-structure.html">App Structure</a></li>
-      <li><a href="{{site.url}}patterns/navigation.html">Navigation</a></li>
-      <li><a href="{{site.url}}patterns/actionbar.html">Action Bar</a></li>
-      <li><a href="{{site.url}}patterns/multi-pane-layouts.html">Multi-pane Layouts</a></li>
-      <li><a href="{{site.url}}patterns/swipe-views.html">Swipe Views</a></li>
-      <li><a href="{{site.url}}patterns/selection.html">Selection</a></li>
-      <li><a href="{{site.url}}patterns/notifications.html">Notifications</a></li>
+      <li><a href="{{site.url}}patterns/gestures.html">제스쳐</a></li>
+      <li><a href="{{site.url}}patterns/app-structure.html">앱 구조</a></li>
+      <li><a href="{{site.url}}patterns/navigation.html">네비게이션</a></li>
+      <li><a href="{{site.url}}patterns/actionbar.html">액션 바</a></li>
+      <li><a href="{{site.url}}patterns/multi-pane-layouts.html">다중 창 레이아웃</a></li>
+      <li><a href="{{site.url}}patterns/swipe-views.html">뷰 스와이프하기</a></li>
+      <li><a href="{{site.url}}patterns/selection.html">선택</a></li>
+      <li><a href="{{site.url}}patterns/notifications.html">알림</a></li>
       <li><a href="{{site.url}}patterns/compatibility.html">호환성</a></li>
-      <li><a href="{{site.url}}patterns/pure-android.html">Pure Android</a></li>
+      <li><a href="{{site.url}}patterns/pure-android.html">순수한 안드로이드</a></li>
     </ul>
   </li>
 
