--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,7 +141,7 @@
           <a href="http://creativecommons.org/licenses/by/2.5/">
           크리에이티브 커먼즈 저작자표시 2.5</a>라이선스를 따릅니다.<br>
           자세한 내용은
-          <a href="http://developer.android.com/license.html">컨텐트 라이선스</a> 약관을 참고하세요.
+          <a href="http://developer.android.com/license.html">내용 라이선스</a> 약관을 참고하세요.
         </p>
 
         <p>
