--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,7 +137,7 @@
       <div id="page-footer" itemscope itemtype="http://schema.org/WPFooter">
 
         <p id="copyright">
-          언급한 사항을 제외하고, 이 내용은
+          별도로 언급한 사항을 제외하고, 이 내용은
           <a href="http://creativecommons.org/licenses/by/2.5/">
           크리에이티브 커먼즈 저작자표시 2.5</a>라이선스를 따릅니다.<br>
           자세한 내용은
