--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,8 +140,8 @@
           별도로 언급한 사항을 제외하고, 이 내용은
           <a href="http://creativecommons.org/licenses/by/2.5/">
           크리에이티브 커먼즈 저작자표시 2.5</a>라이선스를 따릅니다.<br>
-          자세한 내용은
-          <a href="http://developer.android.com/license.html">내용 라이선스</a> 약관을 참고하세요.
+          자세한 내용과 제약은
+          <a href="http://developer.android.com/license.html">내용에 대한 라이선스</a>를 참고하세요.
         </p>
 
         <p>
