nvu님의 작업에 맞추어 변경.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
       <li><a href="{{site.url}}patterns/navigation.html">네비게이션</a></li>
       <li><a href="{{site.url}}patterns/actionbar.html">액션 바</a></li>
       <li><a href="{{site.url}}patterns/multi-pane-layouts.html">다중 창 레이아웃</a></li>
-      <li><a href="{{site.url}}patterns/swipe-views.html">뷰 스와이프하기</a></li>
+      <li><a href="{{site.url}}patterns/swipe-views.html">뷰 스와이프</a></li>
       <li><a href="{{site.url}}patterns/selection.html">선택</a></li>
       <li><a href="{{site.url}}patterns/notifications.html">알림</a></li>
       <li><a href="{{site.url}}patterns/compatibility.html">호환성</a></li>
