UI 개요 작업에 맞추어 항목 이름 변경.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     <ul>
       <li><a href="{{site.url}}get-started/creative-vision.html">Creative Vision</a></li>
       <li><a href="{{site.url}}get-started/principles.html">디자인 원칙</a></li>
-      <li><a href="{{site.url}}get-started/ui-overview.html">UI Overview</a></li>
+      <li><a href="{{site.url}}get-started/ui-overview.html">UI 개요</a></li>
     </ul>
   </li>
 
