메뉴를 번역된 것과 싱크

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     <div class="nav-section-header"><a href="{{site.url}}style/index.html">스타일</a></div>
     <ul>
       <li><a href="{{site.url}}style/devices-displays.html">Devices and Displays</a></li>
-      <li><a href="{{site.url}}style/themes.html">Themes</a></li>
+      <li><a href="{{site.url}}style/themes.html">테마</a></li>
       <li><a href="{{site.url}}style/touch-feedback.html">Touch Feedback</a></li>
       <li><a href="{{site.url}}style/metrics-grids.html">Metrics and Grids</a></li>
       <li><a href="{{site.url}}style/typography.html">Typography</a></li>
@@ -71,17 +71,17 @@
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}building-blocks/index.html">Building Blocks</a></div>
     <ul>
-      <li><a href="{{site.url}}building-blocks/tabs.html">Tabs</a></li>
+      <li><a href="{{site.url}}building-blocks/tabs.html">탭</a></li>
       <li><a href="{{site.url}}building-blocks/lists.html">Lists</a></li>
       <li><a href="{{site.url}}building-blocks/grid-lists.html">Grid Lists</a></li>
       <li><a href="{{site.url}}building-blocks/scrolling.html">Scrolling</a></li>
       <li><a href="{{site.url}}building-blocks/spinners.html">Spinners</a></li>
-      <li><a href="{{site.url}}building-blocks/buttons.html">Buttons</a></li>
+      <li><a href="{{site.url}}building-blocks/buttons.html">버튼</a></li>
       <li><a href="{{site.url}}building-blocks/text-fields.html">Text Fields</a></li>
       <li><a href="{{site.url}}building-blocks/seek-bars.html">Seek Bars</a></li>
       <li><a href="{{site.url}}building-blocks/progress.html">Progress &amp; Activity</a></li>
       <li><a href="{{site.url}}building-blocks/switches.html">Switches</a></li>
-      <li><a href="{{site.url}}building-blocks/dialogs.html">Dialogs</a></li>
+      <li><a href="{{site.url}}building-blocks/dialogs.html">다이얼로그</a></li>
       <li><a href="{{site.url}}building-blocks/pickers.html">Pickers</a></li>
     </ul>
   </li>
