--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       <li><a href="{{site.url}}style/typography.html">Typography</a></li>
       <li><a href="{{site.url}}style/color.html">색상</a></li>
       <li><a href="{{site.url}}style/iconography.html">Iconography</a></li>
-      <li><a href="{{site.url}}style/writing.html">Writing Style</a></li>
+      <li><a href="{{site.url}}style/writing.html">문체</a></li>
     </ul>
   </li>
 
