--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}style/index.html">스타일</a></div>
     <ul>
-      <li><a href="{{site.url}}style/devices-displays.html">Devices and Displays</a></li>
+      <li><a href="{{site.url}}style/devices-displays.html">디바이스 및 디스플레이</a></li>
       <li><a href="{{site.url}}style/themes.html">테마</a></li>
       <li><a href="{{site.url}}style/touch-feedback.html">Touch Feedback</a></li>
       <li><a href="{{site.url}}style/metrics-grids.html">Metrics and Grids</a></li>
