--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}style/index.html">스타일</a></div>
     <ul>
-      <li><a href="{{site.url}}style/devices-displays.html">디바이스 및 디스플레이</a></li>
+      <li><a href="{{site.url}}style/devices-displays.html">기기 및 디스플레이</a></li>
       <li><a href="{{site.url}}style/themes.html">테마</a></li>
-      <li><a href="{{site.url}}style/touch-feedback.html">Touch Feedback</a></li>
+      <li><a href="{{site.url}}style/touch-feedback.html">터치 피드백</a></li>
       <li><a href="{{site.url}}style/metrics-grids.html">Metrics and Grids</a></li>
       <li><a href="{{site.url}}style/typography.html">Typography</a></li>
       <li><a href="{{site.url}}style/color.html">색상</a></li>
