style/typography.html 번역

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       <li><a href="{{site.url}}style/themes.html">테마</a></li>
       <li><a href="{{site.url}}style/touch-feedback.html">터치 피드백</a></li>
       <li><a href="{{site.url}}style/metrics-grids.html">Metrics and Grids</a></li>
-      <li><a href="{{site.url}}style/typography.html">Typography</a></li>
+      <li><a href="{{site.url}}style/typography.html">타이포그래피</a></li>
       <li><a href="{{site.url}}style/color.html">색상</a></li>
       <li><a href="{{site.url}}style/iconography.html">Iconography</a></li>
       <li><a href="{{site.url}}style/writing.html">문체</a></li>
