--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       <li><a href="{{site.url}}style/devices-displays.html">기기 및 디스플레이</a></li>
       <li><a href="{{site.url}}style/themes.html">테마</a></li>
       <li><a href="{{site.url}}style/touch-feedback.html">터치 피드백</a></li>
-      <li><a href="{{site.url}}style/metrics-grids.html">Metrics and Grids</a></li>
+      <li><a href="{{site.url}}style/metrics-grids.html">길이 및 격자</a></li>
       <li><a href="{{site.url}}style/typography.html">Typography</a></li>
       <li><a href="{{site.url}}style/color.html">색상</a></li>
       <li><a href="{{site.url}}style/iconography.html">Iconography</a></li>
