--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
     <ul>
       <li><a href="{{site.url}}building-blocks/tabs.html">탭</a></li>
       <li><a href="{{site.url}}building-blocks/lists.html">목록</a></li>
-      <li><a href="{{site.url}}building-blocks/grid-lists.html">그리드 목록</a></li>
+      <li><a href="{{site.url}}building-blocks/grid-lists.html">격자 목록</a></li>
       <li><a href="{{site.url}}building-blocks/scrolling.html">스크롤</a></li>
       <li><a href="{{site.url}}building-blocks/spinners.html">Spinners</a></li>
       <li><a href="{{site.url}}building-blocks/buttons.html">버튼</a></li>
