_layouts/default.html untranslated message is fixed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,11 +75,11 @@
       <li><a href="{{site.url}}building-blocks/lists.html">목록</a></li>
       <li><a href="{{site.url}}building-blocks/grid-lists.html">격자 목록</a></li>
       <li><a href="{{site.url}}building-blocks/scrolling.html">스크롤</a></li>
-      <li><a href="{{site.url}}building-blocks/spinners.html">Spinners</a></li>
+      <li><a href="{{site.url}}building-blocks/spinners.html">스피너</a></li>
       <li><a href="{{site.url}}building-blocks/buttons.html">버튼</a></li>
       <li><a href="{{site.url}}building-blocks/text-fields.html">텍스트 필드</a></li>
       <li><a href="{{site.url}}building-blocks/seek-bars.html">탐색 바</a></li>
-      <li><a href="{{site.url}}building-blocks/progress.html">Progress &amp; Activity</a></li>
+      <li><a href="{{site.url}}building-blocks/progress.html">프로그레스와 활동</a></li>
       <li><a href="{{site.url}}building-blocks/switches.html">스위치</a></li>
       <li><a href="{{site.url}}building-blocks/dialogs.html">다이얼로그</a></li>
       <li><a href="{{site.url}}building-blocks/pickers.html">피커</a></li>
