some word are modified for consistency

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
     <div class="nav-section-header"><a href="{{site.url}}building-blocks/index.html">구성 요소</a></div>
     <ul>
       <li><a href="{{site.url}}building-blocks/tabs.html">탭</a></li>
-      <li><a href="{{site.url}}building-blocks/lists.html">목록</a></li>
+      <li><a href="{{site.url}}building-blocks/lists.html">리스트</a></li>
       <li><a href="{{site.url}}building-blocks/grid-lists.html">그리드 리스트</a></li>
       <li><a href="{{site.url}}building-blocks/scrolling.html">스크롤</a></li>
       <li><a href="{{site.url}}building-blocks/spinners.html">스피너</a></li>
