창조적인 비전 -> 창조적 비전

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}index.html">시작하기</a></div>
     <ul>
-      <li><a href="{{site.url}}get-started/creative-vision.html">창조적인 비전</a></li>
+      <li><a href="{{site.url}}get-started/creative-vision.html">창조적 비전</a></li>
       <li><a href="{{site.url}}get-started/principles.html">디자인 원칙</a></li>
       <li><a href="{{site.url}}get-started/ui-overview.html">UI 개요</a></li>
     </ul>
