--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
     <div class="nav-section-header"><a href="{{site.url}}patterns/index.html">패턴</a></div>
     <ul>
       <li><a href="{{site.url}}patterns/new-4-0.html">안드로이드 4.0의 새로운 점</a></li>
-      <li><a href="{{site.url}}patterns/gestures.html">제스쳐</a></li>
+      <li><a href="{{site.url}}patterns/gestures.html">제스처</a></li>
       <li><a href="{{site.url}}patterns/app-structure.html">앱 구조</a></li>
       <li><a href="{{site.url}}patterns/navigation.html">네비게이션</a></li>
       <li><a href="{{site.url}}patterns/actionbar.html">액션 바</a></li>
