네비게이션 -> 내비게이션

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
       <li><a href="{{site.url}}patterns/new-4-0.html">안드로이드 4.0의 새로운 점</a></li>
       <li><a href="{{site.url}}patterns/gestures.html">제스처</a></li>
       <li><a href="{{site.url}}patterns/app-structure.html">앱 구조</a></li>
-      <li><a href="{{site.url}}patterns/navigation.html">네비게이션</a></li>
+      <li><a href="{{site.url}}patterns/navigation.html">내비게이션</a></li>
       <li><a href="{{site.url}}patterns/actionbar.html">액션 바</a></li>
       <li><a href="{{site.url}}patterns/multi-pane-layouts.html">다중 창 레이아웃</a></li>
       <li><a href="{{site.url}}patterns/swipe-views.html">뷰 스와이프</a></li>
