--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
       <li><a href="{{site.url}}building-blocks/buttons.html">버튼</a></li>
       <li><a href="{{site.url}}building-blocks/text-fields.html">텍스트 필드</a></li>
       <li><a href="{{site.url}}building-blocks/seek-bars.html">탐색 바</a></li>
-      <li><a href="{{site.url}}building-blocks/progress.html">프로그레스와 액티비티</a></li>
+      <li><a href="{{site.url}}building-blocks/progress.html">프로그레스와 활동</a></li>
       <li><a href="{{site.url}}building-blocks/switches.html">스위치</a></li>
       <li><a href="{{site.url}}building-blocks/dialogs.html">다이얼로그</a></li>
       <li><a href="{{site.url}}building-blocks/pickers.html">피커</a></li>
