--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
       <li><a href="{{site.url}}patterns/swipe-views.html">뷰 스와이프</a></li>
       <li><a href="{{site.url}}patterns/selection.html">선택</a></li>
       <li><a href="{{site.url}}patterns/notifications.html">알림</a></li>
-      <li><a href="{{site.url}}patterns/settings.html">Settings</a></li>
+      <li><a href="{{site.url}}patterns/settings.html">설정</a></li>
       <li><a href="{{site.url}}patterns/compatibility.html">호환성</a></li>
       <li><a href="{{site.url}}patterns/pure-android.html">순수한 안드로이드</a></li>
     </ul>
