읽기 쉬운 단어 사용(수단 -> 방법, 묵살하는 -> 부정하는) 일관성 유지(메세지 -> 메시지, 다이얼로그 -> 대화 상자) 문어체 사용(어떤게 -> 어떤 것이) 오타 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
       <li><a href="{{site.url}}building-blocks/seek-bars.html">탐색 바</a></li>
       <li><a href="{{site.url}}building-blocks/progress.html">프로그레스와 활동</a></li>
       <li><a href="{{site.url}}building-blocks/switches.html">스위치</a></li>
-      <li><a href="{{site.url}}building-blocks/dialogs.html">다이얼로그</a></li>
+      <li><a href="{{site.url}}building-blocks/dialogs.html">대화 상자</a></li>
       <li><a href="{{site.url}}building-blocks/pickers.html">피커</a></li>
     </ul>
   </li>
