--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,37 @@
     <title>
       안드로이드 디자인{%if page.title%} - {{page.title}}{%endif%}
     </title>
-    <!-- TODO urls -->
-    <link rel="shortcut icon" type="image/x-icon" href="http://developer.android.com/favicon.ico">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,mediumitalic">
-    <link rel="stylesheet" href="http://developer.android.com/assets/yui-3.3.0-reset-min.css">
-    <link rel="stylesheet" href="http://developer.android.com/assets/design/default.css">
-    <script src="http://developer.android.com/assets/jquery-1.6.2.min.js"></script>
-    <script>var SITE_ROOT = '{{site.url}}';</script>
-    <script src="http://developer.android.com/assets/design/default.js"></script>
+
+<!-- BASIC STYLESHEETS -->
+<link rel="stylesheet"
+href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,mediumitalic,bold" title="roboto">
+<link href="//developer.android.com/assets/css/default.css" rel="stylesheet" type="text/css">
+
+
+
+
+
+<!-- BASIC JAVASCRIPT -->
+<script src="//developer.android.com/assets/js/global-libraries-combined.js"
+        type="text/javascript"></script>
+<script src="//developer.android.com/assets/js/docs.js" type="text/javascript"></script>
+
+
+
+<!-- search -->
+<script src="//www.google.com/jsapi" type="text/javascript"></script>
+<script src="//developer.android.com/assets/js/search_autocomplete.js" type="text/javascript"></script>
+
+
+
+
+<script src="//developer.android.com/navtree_data.js" type="text/javascript"></script>
+<script type="text/javascript">
+  setToRoot("/");
+  var basePath = getBaseUri(location.pathname);
+  var SITE_ROOT = toRoot + basePath.substring(1,basePath.indexOf("/",1));
+</script>
+
   </head>
   <body itemscope itemtype="http://schema.org/Article">
 
