--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="//developer.android.com/favicon.ico" />
 <title>{%if page.title%}{{page.title}}{%else%}디자인{%endif%} | Android Developers</title>
 
 <!-- BASIC STYLESHEETS -->
