--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,15 +79,9 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
       </ul>
       <div class="header">Languages</div>
         <div id="language" class="locales">
-          <select name="language" onChange="changeLangPref(this.value, true)">
-              <option value="en">English</option>
-              <option value="es">Español</option>
-              <option value="ja">日本語</option>
-              <option value="ko">한국어</option>
-              <option value="ru">Русский</option>
-              <option value="zh-CN">中文 (中国)
-      </option>
-          </select>	
+          <ul>
+            <li><a href="//developer.android.com/design{{page.url}}">원문 보기</a></li>
+          </ul>
         </div>
       <script type="text/javascript">
         <!--  
