원문 사이트의 javascript 변경 반영
base url을 담당하는 변수명이 바뀌어서 자바스크립트가 동작하지 않는
문제가 발생
변경된 코드에서 toRoot의 site.url은 _config.yml에 정의되어 있음

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
 <!-- BASIC JAVASCRIPT -->
 <script src="//developer.android.com/assets/js/global-libraries-combined.js"
         type="text/javascript"></script>
+<script type="text/javascript">
+  var toRoot = "{{site.url}}";
+</script>
 <script src="//developer.android.com/assets/js/docs.js" type="text/javascript"></script>
 
 
@@ -30,11 +33,6 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
 
 
 <script src="//developer.android.com/navtree_data.js" type="text/javascript"></script>
-<script type="text/javascript">
-  setToRoot("/");
-  var basePath = getBaseUri(location.pathname);
-  var SITE_ROOT = toRoot + basePath.substring(1,basePath.indexOf("/",1));
-</script>
 
 </head>
 <body class="gc-documentation
