원 사이트의 레이아웃 css 추가 (#119)
현재 원 사이트에서 사용중인 css를 assets/css/ 폴더에 추가한다.

* favicon.ico는 추가하지 않았다.
* Roboto 웹 폰트 부분(_layouts/defaults.html 11번째 줄)은
  안드로이드 디자인이 아니라 [구글 웹 폰트 API][1] 범위라서
  그대로 두었다.

  [1]: https://developers.google.com/webfonts/docs/getting_started

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <!-- STYLESHEETS -->
 <link rel="stylesheet"
 href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,mediumitalic,bold" title="roboto">
-<link href="//developer.android.com/assets/css/default.css" rel="stylesheet" type="text/css">
+<link href="{{site.url}}/assets/css/default.css" rel="stylesheet" type="text/css">
 
 
 <!-- JAVASCRIPT -->
