--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,32 +6,19 @@
 <link rel="shortcut icon" type="image/x-icon" href="//developer.android.com/favicon.ico" />
 <title>{%if page.title%}{{page.title}}{%else%}디자인{%endif%} | Android Developers</title>
 
-<!-- BASIC STYLESHEETS -->
+<!-- STYLESHEETS -->
 <link rel="stylesheet"
 href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,mediumitalic,bold" title="roboto">
 <link href="//developer.android.com/assets/css/default.css" rel="stylesheet" type="text/css">
 
 
-
-
-
-<!-- BASIC JAVASCRIPT -->
-<script src="//developer.android.com/assets/js/global-libraries-combined.js"
-        type="text/javascript"></script>
+<!-- JAVASCRIPT -->
+<script src="//www.google.com/jsapi" type="text/javascript"></script>
+<script src="//developer.android.com/assets/js/global-libraries-combined.js" type="text/javascript"></script>
 <script type="text/javascript">
   var toRoot = "{{site.url}}";
 </script>
 <script src="//developer.android.com/assets/js/docs.js" type="text/javascript"></script>
-
-
-
-<!-- search -->
-<script src="//www.google.com/jsapi" type="text/javascript"></script>
-<script src="//developer.android.com/assets/js/search_autocomplete.js" type="text/javascript"></script>
-
-
-
-
 <script src="//developer.android.com/navtree_data.js" type="text/javascript"></script>
 
 </head>
