--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
 
 <!-- JAVASCRIPT -->
 <script src="//www.google.com/jsapi" type="text/javascript"></script>
-<script src="//developer.android.com/assets/js/global-libraries-combined.js" type="text/javascript"></script>
+<script src="{{site.url}}/assets/js/global-libraries-combined.js" type="text/javascript"></script>
 <script type="text/javascript">
   var toRoot = "{{site.url}}";
 </script>
-<script src="//developer.android.com/assets/js/docs.js" type="text/javascript"></script>
+<script src="{{site.url}}/assets/js/docs.js" type="text/javascript"></script>
 <script src="//developer.android.com/navtree_data.js" type="text/javascript"></script>
 
 </head>
