--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
 <!-- STYLESHEETS -->
 <link rel="stylesheet"
 href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,mediumitalic,bold" title="roboto">
-<link href="{{site.url}}/assets/css/default.css" rel="stylesheet" type="text/css">
+<link href="{{site.url}}assets/css/default.css" rel="stylesheet" type="text/css">
 
 
 <!-- JAVASCRIPT -->
 <script src="//www.google.com/jsapi" type="text/javascript"></script>
-<script src="{{site.url}}/assets/js/global-libraries-combined.js" type="text/javascript"></script>
+<script src="{{site.url}}assets/js/global-libraries-combined.js" type="text/javascript"></script>
 <script type="text/javascript">
   var toRoot = "{{site.url}}";
 </script>
-<script src="{{site.url}}/assets/js/docs.js" type="text/javascript"></script>
+<script src="{{site.url}}assets/js/docs.js" type="text/javascript"></script>
 <script src="//developer.android.com/navtree_data.js" type="text/javascript"></script>
 
 </head>
