--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
         <div class="wrap" id="header-wrap">
           <div class="col-3 logo">
           <a href="//developer.android.com/index.html">
-            <img src="//developer.android.com/assets/images/dac_logo.png" width="123" height="25" alt="Android Developers" />
+            <img src="{{site.url}}assets/images/dac_logo.png" width="123" height="25" alt="Android Developers" />
           </a>
           <div class="btn-quicknav" id="btn-quicknav">
           	<a href="#" class="arrow-inactive">Quicknav</a>
