--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -95,6 +95,11 @@ body {
   position: fixed;
   margin:0;
   top: 20px; }
+  
+#devdoc-nav span.small {
+  font-size:12px;
+  font-weight:normal;
+}
 
 #content {
   width: 760px;
@@ -2274,7 +2279,7 @@ div.note.distribute {
   margin-bottom:0;
 }
 
-blockquote {
+body.about blockquote {
   display:block;
   float:right;
   width:280px;
