layout: 최상위 메뉴 한국어화
[본 사이트](http://developer.android.com/intl/ko/design/index.html)
참조.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@ href="//fonts.googleapis.com/css?family=Roboto:regular,medium,thin,italic,medium
           </div>
           </div>
             <ul class="nav-x col-9">
-                <li class="design"><a href="{{site.url}}index.html" class="selected" >Design</a></li>
-                <li class="develop"><a href="//developer.android.com/develop/index.html"  >Develop</a></li>
-                <li class="distribute last"><a href="//developer.android.com/distribute/index.html"  >Distribute</a></li>
+                <li class="design"><a href="{{site.url}}index.html" class="selected" >디자인</a></li>
+                <li class="develop"><a href="//developer.android.com/develop/index.html"  >개발</a></li>
+                <li class="distribute last"><a href="//developer.android.com/distribute/index.html"  >배포</a></li>
             </ul>
             
             <!-- New Search -->
@@ -117,10 +117,10 @@ onkeydown="return search_changed(event, true, '/')" onkeyup="return search_chang
                     </li>
                     <li class="develop">
                       <ul>
-                        <li><a href="//developer.android.com/training/index.html">Android Training</a></li>
-                        <li><a href="//developer.android.com/guide/components/index.html">API Guides</a></li>
-                        <li><a href="//developer.android.com/reference/packages.html">Reference</a></li>
-                        <li><a href="//developer.android.com/tools/index.html">Tools</a>
+                        <li><a href="//developer.android.com/training/index.html">교육</a></li>
+                        <li><a href="//developer.android.com/guide/components/index.html">API 가이드</a></li>
+                        <li><a href="//developer.android.com/reference/packages.html">참조문서</a></li>
+                        <li><a href="//developer.android.com/tools/index.html">도구</a>
                           <ul><li><a href="//developer.android.com/sdk/index.html">Get the
 SDK</a></li></ul>
                         </li>
