--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -200,6 +200,7 @@ Distribution</a></li>
       <li><a href="{{site.url}}patterns/widgets.html">위젯</a></li>
       <li><a href="{{site.url}}patterns/settings.html">설정</a></li>
       <li><a href="{{site.url}}patterns/compatibility.html">호환성</a></li>
+      <li><a href="{{site.url}}patterns/accessibility.html">접근성</a></li>
       <li><a href="{{site.url}}patterns/pure-android.html">순수한 안드로이드</a></li>
     </ul>
   </li>
