patterns/new: 4.1 원문 및 그림 파일 추가
원문은 이전 커밋과 마찬가지로
86bba7795e967a1bb93eb7061bb3d5f68ae9126a 기준.

4.1 내용을 추가함에 따라 파일명도 원문에 맞추어 변경하였고,
레이아웃 링크도 수정함

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@ Distribution</a></li>
   <li class="nav-section">
     <div class="nav-section-header"><a href="{{site.url}}patterns/index.html">패턴</a></div>
     <ul>
-      <li><a href="{{site.url}}patterns/new-4-0.html">안드로이드 4.0의 새로운 점</a></li>
+      <li><a href="{{site.url}}patterns/new.html">안드로이드의 새로운 점</a></li>
       <li><a href="{{site.url}}patterns/gestures.html">제스처</a></li>
       <li><a href="{{site.url}}patterns/app-structure.html">앱 구조</a></li>
       <li><a href="{{site.url}}patterns/navigation.html">내비게이션</a></li>
