--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -112,6 +112,11 @@ acronym:hover {
 a:focus,
 a:active {
   color: #33b5e5 !important; }
+  
+a.external-link {
+  background:url('../images/styles/open_new_page.png') no-repeat 100% 50%;
+  padding-right:16px;
+}
 
 img {
   border: none; }
@@ -129,11 +134,14 @@ strong {
 em {
   font-style: italic; }
 
-acronym {
+acronym,
+.tooltip-link {
   border-bottom: 1px dotted #555555;
   cursor: help; }
 
-acronym:hover {
+acronym:hover,
+.tooltip-link:hover {
+  color: #7aa1b0;
   border-bottom-color: #7aa1b0; }
 
 img.with-shadow,
@@ -263,7 +271,8 @@ video.with-shadow {
     line-height: 15px; }
   #nav a {
     color: #555555;
-    text-decoration: none; }
+    text-decoration: none;
+    word-wrap:break-word; }
   #nav .nav-section-header {
     position: relative;
     margin-bottom: 1px;
@@ -317,13 +326,32 @@ video.with-shadow {
     background: transparent; }
   #nav li.expanded li ul {
   /* 3rd level ul */
-    padding:0 10px;
+    padding:0 0 0 10px;
   }
     #nav li.expanded > .nav-section-header:after {
       content: '';
       background: transparent url(../images/styles/disclosure_up.png) no-repeat scroll 50% 50%;
       width: 34px;
       height: 34px; }
+  #nav li.expanded li ul.tree-list-children {
+    padding:0;  
+  }
+  #nav li.expanded li ul.tree-list-children .tree-list-children {
+    padding:0 0 0 10px;  
+  }
+  #nav li span.tree-list-subtitle {
+    display:inline-block;
+    padding:5px 0 0 10px;
+    color:#555;
+    text-transform:uppercase;
+    font-size:12px;
+  }
+  #nav li span.tree-list-subtitle:before {
+    content: '—';
+  }
+  #nav li span.tree-list-subtitle:after {
+    content: '—';
+  }
   #nav li ul {
     display:none;
     overflow: hidden;
@@ -348,11 +376,16 @@ video.with-shadow {
     #nav li ul > li:last-child {
       padding-bottom:5px;
     }
+    #nav li ul.tree-list-children > li:last-child {
+      padding-bottom:0;
+    }
     #nav li.expanded ul > li {
       background:#efefef;
       background: rgba(0, 0, 0, 0.03); }
     #nav li.expanded ul > li li {
       background:inherit; }
+  #nav li ul.tree-list-children ul {
+    display:block; }
 
 .new,
 .new-child {
@@ -406,9 +439,6 @@ video.with-shadow {
     color: #555555;
     text-decoration: none;
     text-transform: uppercase; }
-  .paging-links .prev-page-link,
-  .training-nav-top .prev-page-link {
-    left: -5px; }
     .paging-links .prev-page-link:before,
     .training-nav-top .prev-page-link:before {
       content: '';
@@ -417,11 +447,14 @@ video.with-shadow {
       height: 10px;
       display: inline-block;
       margin-right: 5px; }
-  .paging-links .next-page-link,
-  .training-nav-top .next-page-link,
+    .training-nav-top .next-page-link,
     .training-nav-top .start-class-link,
     .training-nav-top .start-course-link {
     right: 10px; }
+    .paging-links .prev-page-link {
+      left: -15px; }
+    .paging-links .next-page-link {
+      right: 0px; }
     .next-page-link:after,
     .start-class-link:after,
     .start-course-link:after,
@@ -437,35 +470,109 @@ video.with-shadow {
   .training-nav-top a {
     display:block;
     float:left;
-    width:108px;
+    width:122px;
     height:28px;
-    padding: 8px 15px;
+    padding: 8px;
     line-height:28px;
     text-align:center;
     border:1px solid #DADADA;
     border-bottom:0;
   }
-      
+
   .training-nav-top a.next-page-link {
     border-left:0;
-    width:109px;
+    width:123px;
   }
       
+  .paging-links a.disabled,
   .training-nav-top a.disabled,
   .content-footer a.disabled {
-    color:#999;
+    color:#bbb;
   }
       
+  .paging-links a.disabled:hover,
   .training-nav-top a.disabled:hover,
   .content-footer a.disabled:hover {
     cursor:default;
-    color:#999 !important;
+    color:#bbb !important;
   }
       
   .training-nav-top a.start-class-link,
   .training-nav-top a.start-course-link {
-    width:248px;
+    width:262px;
   }
+  
+  /* list of classes on course landing page */
+  ol.class-list {
+    list-style:none;
+    margin-left:0;
+  }
+  ol.class-list>li {
+    margin:0 0 15px;
+    padding:5px 0 0;
+    overflow:hidden;
+    border-top:1px solid #ccc;
+  }
+  ol.class-list li a.title {
+    font-size:16px;
+    margin:0;
+    clear:left;
+    display:block;
+    height:32px;
+    padding:0 4px;
+  }
+  ol.class-list li a.title h2 {
+    color:inherit;
+    margin:0 0 10px;
+    display:block;
+    float:left;
+    width:675px;
+  }
+  ol.class-list li a.title span {
+    display:none;
+    float:left;
+    font-size:18px;
+    font-weight:bold;
+    background: transparent url(../images/styles/disclosure_right.png) no-repeat scroll 50% 50%;
+    width: 10px;
+    height: 32px;
+  }
+  ol.class-list li a.title:hover {
+    background:#ddd;
+    color:#258AAF !important;
+  }
+  ol.class-list li a.title:hover span {
+    display:block;
+  }
+  
+  #jd-content
+  ol.class-list li img {
+    float:left;
+    clear:left;
+    width:64px;
+    margin:0 20px 0 0;
+  }
+  ol.class-list li p.description {
+    float:left;
+    display:block;
+    width:250px;
+    margin:0;
+  }
+  ol.class-list li p.description.article {
+    width: 550px;
+  }
+  ol.class-list ol {
+    float:left;
+    width:320px;
+    margin:0 0 0 30px;
+    list-style:none;
+    margin:0 0 0 20px;
+  }
+  ol.class-list div.lessons li {
+    margin:0 0 6px;
+    line-height:16px;
+  }
+  
   
   .hide {
     display:none !important;
@@ -483,6 +590,49 @@ video.with-shadow {
     float:right;
     text-transform:uppercase;
   }
+  
+  
+  
+  /* inner-doc tabs w/ title */
+  
+div#title-tabs-wrapper {
+  border-bottom:1px solid #ccc;
+  margin:20px 0 30px;
+}
+h1.with-title-tabs {
+  display:inline-block;
+  margin:0 0 -1px 0;
+  padding:0 60px 0 0;
+  border-bottom:1px solid #F9F9F9;
+}
+ul#title-tabs {
+  list-style:none;
+  padding:0;
+  height:29px;
+  margin:0;
+  font-size:16px;
+  line-height:26px;
+  display:inline-block;
+  vertical-align:bottom;
+}
+ul#title-tabs li {
+  display:block;
+  float:left;
+  margin-right:40px;
+  border-bottom: 3px solid transparent;
+}
+ul#title-tabs li.selected {
+  border-bottom: 3px solid #93C;
+}
+ul#title-tabs li a {
+  color:#333;
+}
+ul#title-tabs li a:hover,
+ul#title-tabs li a:active {
+  color:#93C !important;
+}
+
+
 
 /* content body */
 @-webkit-keyframes glowheader {
@@ -657,6 +807,17 @@ scroll top left;
 .framed-galaxynexus-land-span-13 img {
     width: 512px;
     height: 286px; }
+
+
+.framed-galaxynexus-land-span-8{
+  background: transparent url(../images/styles/device_galaxynexus_blank_land_span8.png) no-repeat
+scroll top left;
+  padding: 26px 68px 38px 72px;
+  overflow: hidden; }
+  .framed-galaxynexus-land-span-8, .framed-galaxynexus-land-span-8 video,
+.framed-galaxynexus-land-span-8 img {
+    width: 320px;
+    height: 180px; }
 
 .framed-galaxynexus-port-span-9 {
   background: transparent url(../images/styles/device_galaxynexus_blank_port_span9.png) no-repeat
@@ -919,7 +1080,7 @@ ul ul, ul ol, ol ul, ol ol {
     margin-top: 0;
 }
 li {
-  margin:0 0 4px;
+  margin:0 0 5px;
 }
 dd {
   margin:0 0 10px 30px;
@@ -927,9 +1088,12 @@ dd {
 dd p {
   margin:10px 0 0;
 }
-ul p,
-ol p {
-  margin:10px 0 0;
+li p,
+li pre,
+li ul,
+li ol {
+  margin-top:5px;
+  margin-bottom:5px;
 }
 pre strong, pre b, a strong, a b, a code {
     color: inherit;
@@ -940,6 +1104,7 @@ pre, code {
 }
 code {
     font-weight:bold;
+    font: 14px/14px 'courier new', courier, monospace;
 }
 
 legend {
@@ -973,6 +1138,9 @@ th, td {
 td {
   background-color:inherit;
   border:solid 1px #DDD;
+}
+td *:last-child {
+  margin-bottom:0;
 }
 th {
   background-color: #999;
@@ -1390,6 +1558,7 @@ Buttons
     cursor: pointer;
 }
 .button, a.button {
+    display:inline-block;
     background-color: #09c;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#2faddb), to(#09c));
     background-image: -webkit-linear-gradient(top, #2faddb, #09c);
@@ -1407,18 +1576,14 @@ Buttons
     color: #444;
 }
 a.button, a.button:visited, a.button-secondary, a.button-secondary:visited {
-    height: 28px;
-    line-height: 28px;
     margin-right: 16px;
-	font-weight: 400;
+	 font-weight: 400;
     min-width: 54px;
     outline: 0;
     padding: 8px 15px;
     text-align: center;
 }
 .button, .button-secondary {
-    height: 34px;
-    line-height: 34px;
     margin-right: 16px;
 	font-weight: 400;
     min-width: 54px;
@@ -1444,6 +1609,9 @@ EndColorStr='#4cadcb',GradientType=0);
     background-image: none;
     border-color: #30b7e6;
 }
+a.button.big.subtitle {
+  line-height:18px;
+}
 .button-secondary:hover, a.button-secondary:hover {
     border-color: #dbdbdb;
     background-color: #f3f3f3;
@@ -1458,7 +1626,7 @@ EndColorStr='#ececec');
     color: #33B5E5 !important;
 }
 .button-secondary:active, a.button-secondary:active {
-    border-color: #dadada;
+   border-color: #dadada;
 	background: #ebebeb; /* Old browsers */
 	/* IE9 SVG, needs conditional override of 'filter' to 'none' */
 	background:
@@ -1499,12 +1667,20 @@ endColorstr='#ffffff',GradientType=0 ); /* IE6-8 */
   font-size:20px;
   display:inline-block;
 }
+.button.big span.small {
+  font-size:14px;
+}
+.button-caption {
+  margin-top:10px;
+  font-size:12px;
+  font-style:italic;
+}
 
 .button.disabled,
 .button.disabled:hover,
 .button.disabled:active {
   background:#ebebeb;
-  color:#999;
+  color:#999 !important;
   border-color:#999;
   cursor:default;
 }
@@ -1625,6 +1801,7 @@ EndColorStr='#ececec');
   border-left:4px solid #99CC00;
   float:right;
   padding:0 0 0 10px;
+  margin:0 0 1em 20px;
 }
 
 .sidebox h2,
@@ -1820,15 +1997,54 @@ form .form-error input[type='text'], form .form-error textarea {
     border-color: #eff2f9;
 }
 */
+
+/* SDK TOS styles */
+
+div.sdk-terms {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 10px;
+  height: 370px;
+  width: 738px;
+  border: 1px solid #444;
+  background: transparent;
+  overflow:auto;
+  margin:0 0 10px;
+}
+
+div.sdk-terms.fullsize {
+  padding: 0;
+  height: auto;
+  width: auto;
+  border:none;
+}
+
+div.sdk-terms h3,
+div.sdk-terms h2 {
+  margin:0;
+}
+
+div#sdk-terms-form {
+  padding:0 0 0 10px;
+}
+
+div#sdk-terms-form input {
+  display:inline;
+  margin:4px 4px 4px 0;
+}
+
+
 /* --------------------------------------------------------------------------
 Code Style
 */
 pre {
-	margin: 1em 0;
-	padding: 1em;
-	overflow: auto;
-	border: solid 1px #ddd;
-	background: #f7f7f7;	
+  margin:0 0 1em 0;
+  padding: 1em;
+  overflow: auto;
+  border: solid 1px #ddd;
+  background: #f7f7f7;	
 }
 .str { color: #080; }
 .kwd { color: #008; }
@@ -2206,6 +2422,9 @@ table.blank th, table.blank td {
   list-style:none;
   margin-left:0;
 }
+#tb .nolist {
+  margin-left:15px;
+}
 
 
 pre.classic {
@@ -2229,8 +2448,14 @@ div.figure {
 }
 
 p.table-caption {
-  margin: 0 0 4px 0; /* matches default table left-margin */
+  margin: 0 0 4px 0;
   font-size:13px;
+  color:#666;
+}
+
+p.code-caption {
+  margin: 0 0 4px 0;
+  font: 13px/1.5 'courier new', courier, monospace;
   color:#666;
 }
 
@@ -2247,15 +2472,15 @@ p.warning, div.warning {
   border-left: 4px solid;
 }
 
-p.note {
+p.note, div.note {
   border-color: #258AAF;
 }
 
-p.caution {
+p.caution, div.caution {
   border-color: #FF8800;
 }
 
-p.warning {
+p.warning, div.warning {
   border-color: #ff4443;
 }
 
@@ -2313,6 +2538,29 @@ div.design-announce p {
   text-transform:uppercase;
   line-height:30px;
 }
+
+.expandable {
+  height:34px;
+  padding-left:20px;
+  position:relative;
+}
+.expandable:before {
+  content: '';
+  background-image: url(../images/styles/disclosure_down.png);
+  background-repeat:no-repeat;
+  background-position: -12px -9px;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0; }
+}
+.expandable.expanded:before {
+  background-image: url(../images/styles/disclosure_up.png);
+}
+
+
 
 /* -----------------------------------------------
 Dialog box for popup messages 
@@ -2801,6 +3049,15 @@ h4.jd-details-title {
   background-color: #E2E2E2;
   margin:1.5em 0 .6em;
   padding:3px 95px 3px 3px; /* room for api-level */
+}
+body.google h4.jd-details-title {
+  background-color: #FFF;
+  padding-top:5px;
+  border-top: 1px solid #ccc;
+}
+body.google table.jd-sumtable th {
+  background-color: #FFF;
+  color:#000;
 }
 
 h4.jd-tagtitle {
@@ -3362,7 +3619,7 @@ EndColorStr='#ececec');
 }
 
 #header-wrap.quicknav {
-  height:170px;
+  height:196px;
   
 }
 
@@ -3529,7 +3786,8 @@ EndColorStr='#ececec');
   -transition-timing-function:ease;
 }
 
-.morehover:hover {
+.morehover:hover,
+.morehover.hover {
   opacity:1;
   height:385px;
   width:268px;
@@ -3847,10 +4105,6 @@ a.download-sdk {
 .slideshow-develop .content-right {
   float: left;
 }
-.slideshow-develop .content-right p.title-intro {
-  position:absolute;
-  margin:0;
-}
 .slideshow-develop .content-right h2 {
   padding:0;
   margin-bottom:10px;
@@ -3865,6 +4119,16 @@ a.download-sdk {
 }
 .slideshow-develop .pagination ul li.active:hover {
   background-color: #F80;
+}
+.slideshow-develop .item hr {
+  margin:5px 0 10px;
+}
+.slideshow-develop .item p {
+  margin:10px 0;
+}
+.slideshow-develop .item p.title-intro {
+  position:absolute;
+  margin:0;
 }
 
 /* Feeds */
@@ -4025,20 +4289,21 @@ a.download-sdk {
 }
 
 
+
 /************ DEVELOP TOPIC CONTAINERS ************/
 
 .landing-banner,
 .landing-docs {
   margin:20px 0 0;
 }
-.landing-banner .col-6:first-child,
-.landing-docs .col-6:first-child,
+.landing-banner div:first-child,
+.landing-docs div:first-child,
 .landing-docs .col-12 {
   margin-left:0;
   min-height:280px;
 }
-.landing-banner .col-6:last-child,
-.landing-docs .col-6:last-child,
+.landing-banner div:last-child,
+.landing-docs div:last-child,
 .landing-docs .col-12 {
   margin-right:0;
 }
@@ -4048,6 +4313,7 @@ a.download-sdk {
 }
 .landing-docs {
   clear:left;
+  overflow:hidden;
 }
 .landing-docs h3 {
   font-size:14px;
@@ -4060,9 +4326,14 @@ a.download-sdk {
 .landing-docs a {
   color:#333 !important;
 }
+
 .landing-docs a:hover,
 .landing-docs a:hover * {
   color:#7AA1B0 !important
+}
+
+.landing-docs .normal-links a {
+  color:#258aaf !important;
 }
 
 .plusone {
